--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -10,13 +10,13 @@
 name: OpenWrt-C4
 
 on:
-  push:
-    branches: 
-      - master
-  schedule:
-    - cron: 0 20 * * *
-  release:
-    types: [published]
+  # push:
+  #   branches: 
+  #     - master
+  # schedule:
+  #   - cron: 0 20 * * *
+  # release:
+  #   types: [published]
 
 jobs:
   build:
